--- a/templates/blablacar/index.html
+++ b/templates/blablacar/index.html
@@ -21,7 +21,7 @@
 {% block content %}
 
   {% include 'blablacar/includes/navbar.html' %}
-<h1>Главная страница</h1>
+<h1>Поездки на ваш выбор по самым низким ценам</h1>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
