--- a/templates/blablacar/bus.html
+++ b/templates/blablacar/bus.html
@@ -6,4 +6,11 @@
 
   {% include 'blablacar/includes/navbar.html' %}
 <h1>Забронируйте билет на автобус по самой низкой цене</h1>
+  <form class="search-form">
+    <input type="text" class="search-input" placeholder="Откуда">
+    <input type="text" class="search-input" placeholder="Куда">
+    <input type="date" class="search-input">
+    <input type="number" class="search-input" min="1" max="8" placeholder="Люди">
+    <button type="submit" class="search-button">Найти</button>
+  </form>
   {% endblock %}
